@@ -1,21 +1,18 @@
 package Dompoo.Hongpoong.service;
 
-import Dompoo.Hongpoong.domain.Member;
-import Dompoo.Hongpoong.common.exception.impl.MemberNotFound;
-import Dompoo.Hongpoong.common.exception.impl.PasswordNotSame;
-import Dompoo.Hongpoong.repository.MemberRepository;
-import Dompoo.Hongpoong.api.dto.request.member.MemberEditRequest;
+import Dompoo.Hongpoong.api.dto.request.member.MemberEditDto;
 import Dompoo.Hongpoong.api.dto.request.member.MemberRoleEditRequest;
-import Dompoo.Hongpoong.api.dto.response.member.MemberListResponse;
+import Dompoo.Hongpoong.api.dto.response.member.MemberResponse;
 import Dompoo.Hongpoong.api.dto.response.member.MemberStatusResponse;
+import Dompoo.Hongpoong.common.exception.impl.MemberNotFound;
+import Dompoo.Hongpoong.domain.Member;
+import Dompoo.Hongpoong.repository.MemberRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @Service
 @Transactional
@@ -25,15 +22,11 @@ public class MemberService {
     private final MemberRepository repository;
     private final PasswordEncoder encoder;
 
-    public void editMember(Long memberId, MemberEditRequest request) {
+    public void editMember(Long memberId, MemberEditDto dto) {
         Member member = repository.findById(memberId)
                 .orElseThrow(MemberNotFound::new);
-
-        if (request.getUsername() != null) member.setUsername(request.getUsername());
-        if (request.getPassword1() != null && request.getPassword2() != null) {
-            if(!request.getPassword1().equals(request.getPassword2())) throw new PasswordNotSame();
-            member.setPassword(encoder.encode(request.getPassword1()));
-        }
+        
+        member.edit(dto, encoder);
     }
 
     public void deleteMember(Long memberId) {
@@ -43,10 +36,10 @@ public class MemberService {
         repository.delete(member);
     }
 
-    public List<MemberListResponse> getList() {
+    public List<MemberResponse> getList() {
         return repository.findAll().stream()
-                .map(MemberListResponse::new)
-                .collect(toList());
+                .map(MemberResponse::from)
+                .toList();
     }
 
     public void editRole(Long id, MemberRoleEditRequest request) {
@@ -60,6 +53,6 @@ public class MemberService {
         Member member = repository.findById(memberId)
                 .orElseThrow(MemberNotFound::new);
 
-        return new MemberStatusResponse(member);
+        return MemberStatusResponse.from(member);
     }
 }
